--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.17.0",
+    "react-to-print": "^2.14.15",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
